# AI-Powered-Security-Investigation-Orchestrator

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  run.ps1  smoke.ps1
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema_rls.py  0002_agent_memory_approvals_rules.py  0003_user_accounts.py  0004_incident_dna.py
backend/app/: __init__.py  main.py  ratelimit.py  repository.py
backend/app/agents/: __init__.py  consensus.py  loop.py  memory.py  planner.py  reflection.py  state.py  tools.py
backend/app/api/: deps.py
backend/app/core/: accounts.py  (+9 more)
backend/seed/: sample_phishing_alert.json  sample_splunk_alert.json
backend/tests/: conftest.py  test_agents.py  test_api.py  test_approvals.py  test_auth_native.py  test_campaign.py  test_connectors_live.py  test_connectors_selfhosted.py  test_consensus.py  test_detection.py  test_detection_export.py  test_dossier.py  test_dossier_sources.py  test_durability.py  test_executive.py  test_fingerprint.py  test_generation_agents.py  test_graph.py  test_hardening.py  test_hunt_detection_api.py  test_ioc_extraction.py  test_metrics.py  test_model_router.py  test_normalizers.py  test_offline_cache.py  test_orchestrator.py  test_parsers.py  test_parsers_binary.py  test_planning.py  test_prediction_response.py  test_public_feeds.py  test_reflection.py  test_risk_scoring.py  test_semantic.py  test_specialists.py  test_streaming.py  test_verdict_aggregation.py
(+273 files in other folders)
