[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisflow-backend"
version = "0.1.0"
description = "AegisFlow — AI-Powered Security Investigation Orchestrator (backend)"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "redis>=5.0",
    "python-jose[cryptography]>=3.3",
    "structlog>=24.1",
    "tenacity>=8.3",
    "neo4j>=5.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
    "respx>=0.21",
]
temporal = ["temporalio>=1.6"]
kafka = ["aiokafka>=0.11"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "UP", "ASYNC"]
ignore = ["S101"]  # asserts allowed in tests
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[tool.bandit]
exclude_dirs = ["tests"]
